Cleans up and adds JavaDoc to the SQLQueryGenerator (previously SQLQueryMaker)
Additionally, fixes various warnings