@@ -29,13 +29,13 @@ public class Network {
     protected HashMap<String, IPortal> portalList;
     protected Database database;
     protected String name;
-    protected SQLQueryMaker sqlMaker;
+    protected SQLQueryGenerator sqlMaker;
 
 
     final static EnumMap<GateStructureType, HashMap<SGLocation, IPortal>> portalFromPartsMap = new EnumMap<>(GateStructureType.class);
 
-    public Network(String name, Database database, SQLQueryMaker sqlMaker) throws NameError {
-        if (name.isBlank() || (name.length() == Stargate.MAX_TEXT_LENGTH))
+    public Network(String name, Database database, SQLQueryGenerator sqlMaker) throws NameError {
+        if (name.trim().isEmpty() || (name.length() == Stargate.MAX_TEXT_LENGTH))
             throw new NameError(TranslatableMessage.NAME_LENGTH_FAULT);
         this.name = name;
         this.database = database;
@@ -71,13 +71,13 @@ public class Network {
         }
     }
 
-    public void removePortal(IPortal portal, boolean saveToDatabase, SQLQueryMaker.Type type) {
+    public void removePortal(IPortal portal, boolean saveToDatabase, PortalType portalType) {
         portalList.remove(portal.getName());
         if (!saveToDatabase)
             return;
         try {
             Connection conn = database.getConnection();
-            PreparedStatement statement = sqlMaker.compileRemoveStatement(conn, portal, type);
+            PreparedStatement statement = sqlMaker.generateRemovePortalStatement(conn, portal, portalType);
             statement.execute();
             statement.close();
             conn.close();
@@ -87,13 +87,13 @@ public class Network {
     }
 
     public void removePortal(IPortal portal, boolean saveToDatabase) {
-        this.removePortal(portal, saveToDatabase, SQLQueryMaker.Type.LOCAL);
+        this.removePortal(portal, saveToDatabase, PortalType.LOCAL);
     }
 
-    protected void savePortal(Database database, IPortal portal, SQLQueryMaker.Type type) {
+    protected void savePortal(Database database, IPortal portal, PortalType portalType) {
         try {
             Connection conn = database.getConnection();
-            PreparedStatement statement = sqlMaker.compileAddStatement(conn, portal, type);
+            PreparedStatement statement = sqlMaker.generateAddPortalStatement(conn, portal, portalType);
             statement.execute();
             statement.close();
             conn.close();
@@ -105,7 +105,7 @@ public class Network {
 
     protected void savePortal(IPortal portal) {
         boolean isInterServer;
-        savePortal(database, portal, SQLQueryMaker.Type.LOCAL);
+        savePortal(database, portal, PortalType.LOCAL);
     }
 
     public void addPortal(IPortal portal, boolean saveToDatabase) {
@@ -165,8 +165,7 @@ public class Network {
         if (!(portalFromPartsMap.containsKey(key))) {
             return null;
         }
-        IPortal portal = portalFromPartsMap.get(key).get(loc);
-        return portal;
+        return portalFromPartsMap.get(key).get(loc);
     }
 
     /**
